--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run build && npm run path hello"
   },
   "keywords": [],
-  "debug" : "false",
+  "debug": "false",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -27,9 +27,10 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^22.5.4",
     "@types/prompt-sync": "^4.2.3",
-    "@types/minimist": "^1.2.5",
     "typescript": "^5.5.4"
   }
 }
